# commerce-bot

./: .env.example  .gitignore  Cargo.toml  Config.toml  LICENSE  README.md
scripts/: create_db.sh  drop_db.sh  seed_db.sh
src/: main.rs  schema.rs  utils.rs
src/commands/: add.rs  cancel.rs  cart.rs  help.rs  inventory.rs  mod.rs  orders.rs  remove.rs  shop.rs  start.rs
