[package]
name = "commerce-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.35.1", features = ["full"] }
eyre = "0.6.11"
dotenvy = "0.15.7"
itertools = "0.12.0"
openssl = { version = "*", features = ["vendored"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
